# kulms-download

./: .cursorrules  .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
src/kulms_download/: constants.py  cookie_coding.py  cookie_getter_window.py  cookie_persistence.py  download.py  fetch_site_list.py  kulms_components.py  main.py  secrets_get_set.py  settings.py  utility.py
src/kulms_download/cli/: kulms_download_cli.py
src/kulms_download/cookie/: cookie_fetcher.py  cookie_jar.py  credential_manager.py  local_cookie_manager.py  password_app_opener.py  remote_cookie_fetcher.py
src/kulms_download/download/: resource_downloader.py
src/kulms_download/metadatafetch/: metadata_fetcher.py
src/kulms_download/shared/: api_client.py  components.py  constants.py  exceptions.py  settings.py
