[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kulms-download"
description = "Download site resources from KULMS, Kyoto University Learning Management System."
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
    "aiofiles",
    "httpx",
    "keyring",
    "platformdirs",
    "pywebview",
    "questionary",
    "rich",
    "prompt_toolkit >=2.0,<4.0",
    "pyotp"
]
keywords = ["kyoto", "ku", "download", "kulms"]

[project.scripts]
kulms-download = "kulms_download.cli.kulms_download_cli:main"

[project.optional-dependencies]
dev = ["ipython"]

[project.urls]
Repository = "https://github.com/Harumaru169/kulms-download"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"